.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Shift_Payload__c/VMS_Shift_Payload__c.object-meta.xml
<CustomObject>
    <label>VMS Shift Payload</label>
    <nameField>
        <displayFormat>SMP-{00000000}</displayFormat>
        <label>Payload Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VMS Shift Payloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>