.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Shift_Payload__c/fields/External_Shift_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Shift_ID__c</fullName>
    <label>External Shift ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>