.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Shift_Payload__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>sirenum__Shift__c</referenceTo>
    <relationshipLabel>VMS Shift Payloads</relationshipLabel>
    <relationshipName>VMS_Shift_Payloads</relationshipName>
    <type>Lookup</type>
</CustomField>