.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Shift_Payload__c/fields/VMS_Account__c.field-meta.xml
<CustomField>
    <fullName>VMS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VMS Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VMS Shift Payloads</relationshipLabel>
    <relationshipName>VMS_Shift_Payloads</relationshipName>
    <type>Lookup</type>
</CustomField>